@@ -639,7 +639,7 @@ SHELL cat /etc/shorewall/rules.d/*.rules</programlisting></para>
 
       <member>IPT_OPTIONS</member>
 
-      <member><emphasis role="bold">NOROUTES</emphasis></member>
+      <member>NOROUTES</member>
 
       <member>PREVIEW</member>
 
@@ -649,7 +649,7 @@ SHELL cat /etc/shorewall/rules.d/*.rules</programlisting></para>
 
       <member>PURGE</member>
 
-      <member><emphasis role="bold">RECOVERING</emphasis></member>
+      <member>RECOVERING</member>
 
       <member>RESTOREPATH</member>
 
@@ -664,7 +664,7 @@ SHELL cat /etc/shorewall/rules.d/*.rules</programlisting></para>
 
       <member>TEST</member>
 
-      <member><emphasis role="bold">TIMESTAMP</emphasis></member>
+      <member>TIMESTAMP</member>
 
       <member>USE_VERBOSITY</member>
 
