@@ -57,7 +57,7 @@
 
       <member>IPT_OPTIONS</member>
 
-      <member><emphasis role="bold">NOROUTES</emphasis></member>
+      <member>NOROUTES</member>
 
       <member>PREVIEW</member>
 
@@ -65,9 +65,9 @@
 
       <member>PROFILE</member>
 
-      <member><emphasis role="bold">PURGE</emphasis></member>
+      <member>PURGE</member>
 
-      <member><emphasis role="bold">RECOVERING</emphasis></member>
+      <member>RECOVERING</member>
 
       <member>RESTOREPATH</member>
 
@@ -82,7 +82,7 @@
 
       <member>TEST</member>
 
-      <member><emphasis role="bold">TIMESTAMP</emphasis></member>
+      <member>TIMESTAMP</member>
 
       <member>USE_VERBOSITY</member>
 
