@@ -302,15 +302,23 @@ None.
 	ECHO_N
 	EXPORT
 	FAST
+	HOSTNAME
 	IPT_OPTIONS
+	NOROUTES
+	PREVIEW
+	PRODUCT
 	PROFILE
 	PURGE
+	RECOVERING
 	RESTOREPATH
 	RING_BELL
+	STOPPING
 	TEST
+	TIMESTAMP
 	USE_VERBOSITY
 	VERBOSE
 	VERBOSE_OFFSET
+	VERSION
 	
     See Migration Issue 14 above for additional information.
 
